# rules_gitlab

./: .gitignore  CHANGELOG.md  README.md
.github/workflows/: ci.yml
examples/generate/: BUILD.bazel
examples/generate/golden/: .gitlab-ci.yml
examples/smoke/: BUILD.bazel  valid.gitlab-ci.yml
gitlab/: BUILD.bazel  defs.bzl  extensions.bzl
gitlab/glab/: BUILD.bazel  defs.bzl  system_glab.sh  toolchain_type.bzl
gitlab/private/: BUILD.bazel  validate_main.py
tooling/: BUILD.bazel  pyproject.toml
