load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

package(default_visibility = ["//visibility:public"])

exports_files([
    "defs.bzl",
    "extensions.bzl",
])

bzl_library(
    name = "defs_bzl",
    srcs = ["defs.bzl"],
    deps = ["//gitlab/glab:toolchain_type_bzl"],
)

bzl_library(
    name = "extensions_bzl",
    srcs = ["extensions.bzl"],
)
