# rules_gitlab internal tooling deps. Pulled into the
# `@rules_gitlab_tooling` pip hub.
[project]
name = "rules-gitlab-tooling"
version = "0.0.0"
requires-python = ">=3.11,<3.14"
dependencies = [
    "check-jsonschema>=0.33,<1.0",
    # The validator wrapper registers PyYAML constructors to absorb
    # GitLab's custom CI YAML tags (`!reference`, `!file`, etc.).
    # check-jsonschema pulls PyYAML transitively, but rules_python
    # only sees deps we declare directly here.
    "pyyaml>=6.0,<7.0",
]
