load("@bazel_skylib//rules:build_test.bzl", "build_test")
load("@rules_gitlab//gitlab:defs.bzl", "gitlab_ci_lint", "gitlab_ci_validate")

package(default_visibility = ["//visibility:public"])

# Smoke test: a minimal valid .gitlab-ci.yml fixture must pass
# schema validation. Failure of this target in CI signals either
# a schema-pin drift (upstream broke compatibility) or a bug in
# the rule wiring.
gitlab_ci_validate(
    name = "valid_smoke",
    src = "valid.gitlab-ci.yml",
)

# Lint variant exercises the launcher-script generation +
# toolchain resolution; `bazel build` is enough to verify the
# launcher is produced. Running it requires `glab auth login`,
# so we don't gate CI on actually running it.
gitlab_ci_lint(
    name = "valid_smoke_lint",
    src = "valid.gitlab-ci.yml",
    # Empty repo — under `bazel run` glab will fall back to the
    # cwd's git remote (gitlab.com if nothing matches). Real
    # consumers should set this; the fixture leaves it blank
    # because we only `bazel build` here.
)

# Surface the validate + lint smoke targets under `bazel test` so
# rules_gitlab's GitHub Actions CI gates them. The lint target's
# output is just the generated launcher script (no network call
# happens during build), so this stays hermetic.
build_test(
    name = "smoke_build_test",
    targets = [
        ":valid_smoke",
        ":valid_smoke_lint",
    ],
)
