load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load("@rules_shell//shell:sh_binary.bzl", "sh_binary")
load(":defs.bzl", "glab_toolchain")

package(default_visibility = ["//visibility:public"])

exports_files([
    "defs.bzl",
    "toolchain_type.bzl",
])

bzl_library(
    name = "toolchain_type_bzl",
    srcs = ["toolchain_type.bzl"],
)

bzl_library(
    name = "defs_bzl",
    srcs = ["defs.bzl"],
    deps = [":toolchain_type_bzl"],
)

toolchain_type(name = "toolchain_type")

# Default toolchain: thin shell wrapper around system `glab`.
sh_binary(
    name = "system_glab",
    srcs = ["system_glab.sh"],
)

glab_toolchain(
    name = "default_glab",
    glab = ":system_glab",
)

toolchain(
    name = "default_glab_toolchain",
    toolchain = ":default_glab",
    toolchain_type = ":toolchain_type",
)
